--- a/ChromeExtension/manifest.json
+++ b/ChromeExtension/manifest.json
@@ -16,6 +16,6 @@
       "128": "icon.png"
    },
    "name": "Google+ Tweaks",
-   "permissions": [ "http://plus.google.com/*", "https://plus.google.com/*", "http://userscripts.org/*", "unlimited_storage", "notifications" ],
-   "version": "0.26"
+   "permissions": [ "http://plus.google.com/*", "https://plus.google.com/*", "unlimited_storage", "notifications" ],
+   "version": "0.3"
 }
