--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,7 @@
       	"includes/jquery.js", 
       	"includes/gm_functions.js", 
       	"includes/jqueryui.js", 
+      	"includes/showdown.js", 
       	"includes/script_options.js", 
       	"includes/userscript.user.js"
       ],
@@ -17,5 +18,5 @@
    },
    "name": "Google+ Tweaks",
    "permissions": [ "http://plus.google.com/*", "https://plus.google.com/*", "unlimited_storage", "notifications" ],
-   "version": "0.32"
+   "version": "0.33"
 }
