--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
    "background_page": "background.html",
+   "options_page": "options.html",
    "content_scripts": [ {
       "js": [ 
       	"includes/jquery.js", 
@@ -18,5 +19,5 @@
    },
    "name": "Google+ Tweaks",
    "permissions": [ "http://plus.google.com/*", "https://plus.google.com/*", "unlimited_storage", "notifications" ],
-   "version": "1"
+   "version": "1.11"
 }
