--- a/manifest.json
+++ b/manifest.json
@@ -13,11 +13,11 @@
       "matches": [ "http://plus.google.com/*", "https://plus.google.com/*" ],
       "run_at": "document_end"
    } ],
-   "description": "Tweaks to the layout and features of Google+ (Google \"Plus\") Full width, thumbnails only, etc.",
+   "description": "NO LONGER MAINTAINED. Tweaks to the layout and features of Google+",
    "icons": {
       "128": "icon.png"
    },
    "name": "Google+ Tweaks",
    "permissions": [ "http://plus.google.com/*", "https://plus.google.com/*", "unlimited_storage", "notifications" ],
-   "version": "1.1157"
+   "version": "1.1158"
 }
